--- a/src/Components/com.css
+++ b/src/Components/com.css
@@ -12,7 +12,7 @@
     background-color: #1f1212;
     padding: 20px 20px;
     box-shadow: 0 2px 8px rgba(247, 7, 7, 0.1);
-    z-index: 1000; /* Ensure it stays on top */
+    z-index: 1000; 
 }
 
 .logo {
